@@ -1736,9 +1736,15 @@ again:
     FORWARD_NODE(R_print.na_string);
     FORWARD_NODE(R_print.na_string_noquote);
 
-    if (R_SymbolTable != NULL)      /* in case of GC during startup */
-        for (i = 0; i < HSIZE; i++) /* Symbol table */
+    if (R_SymbolTable != NULL) /* in case of GC during startup */
+        for (i = 0; i < HSIZE; i++)
+        { /* Symbol table */
             FORWARD_NODE(R_SymbolTable[i]);
+            SEXP s;
+            for (s = R_SymbolTable[i]; s != R_NilValue; s = CDR(s))
+                if (ATTRIB(CAR(s)) != R_NilValue)
+                    REprintf("****found a symbol with attributes\n");
+        }
 
     if (R_CurrentExpr != NULL) /* Current expression */
         FORWARD_NODE(R_CurrentExpr);
